--- a/M5-model-deployment/config/settings.json
+++ b/M5-model-deployment/config/settings.json
@@ -18,7 +18,7 @@
     },
     "directories": {
         "data": "data",
-        "inference_data": "inference",
+        "inference_data": "inference_images",
         "models": "models",
         "raw_data": "raw",
         "results": "results",
