--- a/M5-model-deployment/src/mle_hw5_package/batch_inference/Dockerfile
+++ b/M5-model-deployment/src/mle_hw5_package/batch_inference/Dockerfile
@@ -18,13 +18,13 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
 
 USER airflow
 
-COPY ./data/inference_images /opt/airflow/data/inference_images
-COPY ./src/mle_hw5_package/batch_inference /opt/airflow/src/mle_hw5_package/batch_inference
-COPY ./config/settings.json /opt/airflow/config
-COPY ./requirements.txt /opt/airflow
-COPY ./src/mle_hw5_package/models /opt/airflow/src/mle_hw5_package/models
-COPY ./src/mle_hw5_package/preprocess.py /opt/airflow/src/mle_hw5_package
+COPY ./data/inference_images/ ./data/inference_images
+COPY ./src/mle_hw5_package/batch_inference/ ./src/mle_hw5_package/batch_inference
+COPY ./src/mle_hw5_package/config/settings.json ./src/mle_hw5_package/config
+COPY ./src/mle_hw5_package/requirements.txt ./src/mle_hw5_package
+COPY ./models ./models
+COPY ./src/mle_hw5_package/preprocess.py ./src/mle_hw5_package
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./src/mle_hw5_package/requirements.txt
 
 ENV AIRFLOW_HOME=/opt/airflow
