--- a/M5-model-deployment/src/mle_hw5_package/online_inference/client/Dockerfile
+++ b/M5-model-deployment/src/mle_hw5_package/online_inference/client/Dockerfile
@@ -10,11 +10,13 @@ ENV DOCKER_ENV=TRUE
 WORKDIR /app
 
 # Ensure paths are correct relative to the context set in docker-compose.yml
-COPY ./data/inference_images/ /app/data/inference_images
-COPY ./src/mle_hw5_package/online_inference/client/ /app/src/mle_hw5_package/online_inference/client/
-COPY ./config/settings.json /app/config/
-COPY ./requirements.txt /app/
+COPY ./data/inference_images/ ./data/inference_images
+COPY ./src/mle_hw5_package/online_inference/client/ ./src/mle_hw5_package/online_inference/client/
+COPY ./src/mle_hw5_package/config ./src/mle_hw5_package/config
+COPY ./src/mle_hw5_package/requirements.txt .src/mle_hw5_package/
 
 RUN pip install requests
 
-CMD ["python", "/app/src/mle_hw5_package/online_inference/client/example_request_online_inference.py"]
+WORKDIR /app/src/mle_hw5_package/online_inference/client
+
+CMD ["python", "example_request_online_inference.py"]
