--- a/M7-governance/.github/workflows/train.yaml
+++ b/M7-governance/.github/workflows/train.yaml
@@ -2,18 +2,22 @@ name: sentiment-analysis
 on: [push]
 jobs:
   run:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
+    container: docker://dvcorg/cml-py3:latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-      - uses: iterative/setup-cml@v1
-      - name: Train model
+      - uses: actions/checkout@v2
+      - name: cml_run
         env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip install -r requirements.txt
-          python train.py
+          dvc repro 
 
-          cat metrics.txt >> report.md
-          echo "![](./plot.png)" >> report.md
-          cml comment create report.md
+          git fetch --prune
+          dvc metrics diff --show-md master > report.md
+
+          # Add figure to the report
+          echo "## Confusion matrix"
+          cml-publish metrics/confusion_matrix.png --md >> report.md
+          cml-send-comment report.md
+
