--- a/M7-governance/.github/workflows/train.yaml
+++ b/M7-governance/.github/workflows/train.yaml
@@ -11,6 +11,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip install -r requirements.txt
+          dvc pull
           dvc repro 
 
           git fetch --prune
