--- a/M7-governance/.github/workflows/train.yaml
+++ b/M7-governance/.github/workflows/train.yaml
@@ -2,6 +2,7 @@ name: sentiment-analysis
 on: [push]
 jobs:
   run:
+    permissions: write-all
     runs-on: [ubuntu-latest]
     container: docker://dvcorg/cml-py3:latest
     steps:
@@ -13,12 +14,13 @@ jobs:
           pip install -r requirements.txt
           dvc pull
           dvc repro 
+          git config --global --add safe.directory '*'
 
           git fetch --prune
-          dvc metrics diff --show-md master > report.md
+          dvc metrics diff --md master > report.md
 
           # Add figure to the report
           echo "## Confusion matrix"
           cml-publish metrics/confusion_matrix.png --md >> report.md
-          cml-send-comment report.md
+          cml comment create report.md
 
