--- a/M7-governance/.github/workflows/cml.yaml
+++ b/M7-governance/.github/workflows/cml.yaml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
       - uses: iterative/setup-cml@v1
         with:
           fetch-depth: 0  # Fetch all history for all branches and tags
